# HighTide

./: Makefile
.claude/skills/find-designs/: SKILL.md
.claude/skills/update-design/: SKILL.md
designs/asap7/bp_processor/: config.mk
designs/src/bp_processor/: BUILD.bazel  verilog.mk
designs/src/bp_processor/dev/: setup.sh
designs/src/cnn/: BUILD.bazel
designs/src/gemmini/: BUILD.bazel
designs/src/sha3/: BUILD.bazel
designs/src/sha3/dev/: setup.sh
