# bp_processor has no pre-generated release RTL.
# To create release RTL: run update-rtl flow, then copy output here.

filegroup(
    name = "rtl_release",
    srcs = glob(["bp_processor.v"]),
)

# Requires: git submodule update --init designs/src/bp_processor/dev/repo
#           sv2v must be on PATH
genrule(
    name = "rtl_dev_gen",
    srcs = glob(
        ["dev/**"],
        exclude = ["dev/generated/**"],
    ),
    outs = ["bp_processor_gen.v"],
    cmd = "cd $$(dirname $(location dev/setup.sh)) && bash setup.sh && cp generated/bp_processor.v $(OUTS)",
    tools = ["dev/setup.sh"],
)

alias(
    name = "rtl",
    actual = select({
        "//:update_rtl": ":rtl_dev_gen",
        "//conditions:default": ":rtl_release",
    }),
    visibility = ["//visibility:public"],
)
