filegroup(
    name = "rtl_release",
    srcs = ["gemmini.v"],
)

# Requires: git submodule update --init designs/src/gemmini/dev/repo
#           sbt (Scala build tool) must be on PATH
genrule(
    name = "rtl_dev_gen",
    srcs = glob(
        ["dev/**"],
        exclude = ["dev/generated/**"],
    ),
    outs = ["gemmini_gen.v"],
    cmd = "cd $$(dirname $(location dev/setup.sh)) && bash setup.sh && cp generated/gemmini.v $(OUTS)",
    tools = ["dev/setup.sh"],
)

alias(
    name = "rtl",
    actual = select({
        "//:update_rtl": ":rtl_dev_gen",
        "//conditions:default": ":rtl_release",
    }),
    visibility = ["//visibility:public"],
)
