# sha3 has no pre-generated release RTL.
# To create release RTL: run update-rtl flow, then copy output here.

filegroup(
    name = "rtl_release",
    srcs = glob(["sha3.v"]),
)

# Requires: git submodule update --init designs/src/sha3/dev/repo
#           sbt (Scala build tool) must be on PATH
genrule(
    name = "rtl_dev_gen",
    srcs = glob(
        ["dev/**"],
        exclude = ["dev/generated/**"],
    ),
    outs = ["sha3_gen.v"],
    cmd = "cd $$(dirname $(location dev/setup.sh)) && bash setup.sh && cp generated/sha3.v $(OUTS)",
    tools = ["dev/setup.sh"],
)

alias(
    name = "rtl",
    actual = select({
        "//:update_rtl": ":rtl_dev_gen",
        "//conditions:default": ":rtl_release",
    }),
    visibility = ["//visibility:public"],
)
